[tool.poetry]
name = "terminology"
version = "1.0.7"
description = "An intuitive way to color terminal text"
authors = ["Juan Gonzalez <jrg2156@gmail.com>"]
repository = "https://github.com/juanrgon/terminology"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~2.7 || ^3.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
tox = "^3.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
